--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - DB_HOST=db
       - DB_USER=postgres
       - DB_PASSWORD=password
-      - DB_NAME=bookstore_go_development
+      - DB_NAME=go_api
       - DB_PORT=5432
       - PORT=9090
 
@@ -24,7 +24,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: bookstore_go_development
+      POSTGRES_DB: go_api
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
